Add DomainActions to the enrich stage which will run validation and produce indexed metadata